Margins fix + scrollbars als het nodig is

--- a/Project/assets/css/style.css
+++ b/Project/assets/css/style.css
@@ -15,11 +15,11 @@ header{
 
 #menu_bar{
 	float: left;
-	width: 80%
+	width: 80%;
 }
 
 #map_bar{
-	height: 50px;
+	height: 52px;
 }
 
 #map_button{
@@ -64,8 +64,12 @@ input, select, textarea{
  
 #content{
 	color: white;
-	margin-top: 205px;
-	margin: 75px;
+    position: absolute;
+	top: 107px;
+	left: 75px;
+    right: 75px;
+    bottom: 75px;
+    overflow: auto;
 }
 
 #mapClick{
